# data_comparison_tool

./: .env  .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  \  ]  docker-compose.yml  test.csv
src/: argument_parser.rs  comparison_data.rs  data.rs  data_comparer.rs  data_creator.rs  data_exporter.rs  data_injector.rs  data_querier.rs  data_unit_test.rs  lib.rs  log.rs  main.rs  processor.rs  ui.rs  unit_tests.rs
src/database/: mysql.rs  sqlite.rs
src/datastore/: csv.rs  generator.rs  mysql.rs  sqlite.rs  transformer.rs
src/interface/: argument_parser.rs  log.rs  log_options.rs  state.rs  tui.rs  ui-state.rs  ui.rs
src/models/: argument_parser.rs  comparison_data.rs  table_data.rs
src/tests/: log_test.rs  processor_test.rs
tests/: csv_tests.rs  generator_and_transformer_tests.rs  log_tests.rs  processor_tests.rs  setup.rs
