[package]
name = "data_comparison_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
block-on = "0.3.0"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time", "sqlite"]}
tokio = {version="1.36.0", feature = ["full", "rt", "macros"] }
